--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,46 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
+
 <body>
     <div class="head">
         <a href="http://localhost:3030/addDb">Add Place</a>
         <form action="">
-        <input type="search" class="searchPlace " name="dist" placeholder="Search Dist..">
-        <button class="btn btn-outline-info">Search</button>
-    </form>
+            <input type="search" class="searchPlace " name="dist" placeholder="Search Dist..">
+            <button class="btn btn-outline-info">Search</button>
+        </form>
     </div>
-    
-    <br><br>
-    
-    <div class="all">
-    <% for(let result of results){ %>
-        <div class=" card">
-        
-                <img src="<%= result.image %>">
-            
-            <h3><%= result.name %></h3>
-            <p> <%= result.dist %> </p>
-            <p> <%= result.description %> </p>
 
-            <div class="btns">
-                <a href="/place/<%=result._id%>/edit" class="btn btn-outline-success col-3 offset-1 edit-btn" >Edit</a>
-            
-            
-            
-            <form method="POST" action="/place/<%= result._id %>?_method=DELETE">
-                <button class="btn btn-outline-danger offset-7">Delete</button>
-               </form>
-        </div>
-        <br>
-        </div>
-    <% } %>
-</div>
+    <br><br>
+
+    <div class="all">
+        <% for(let result of results){ %>
+            <div class=" card">
+
+                <img src="<%= result.image %>">
+
+                <h3>
+                    <%= result.name %>
+                </h3>
+                <p>
+                    <%= result.dist %>
+                </p>
+                <p>
+                    <%= result.description %>
+                </p>
+
+                <div class="btns">
+                    <a href="/place/<%=result._id%>/edit"
+                        class="btn btn-outline-success col-3 offset-1 edit-btn">Edit</a>
+
+
+
+                    <form method="POST" action="/place/<%= result._id %>?_method=DELETE">
+                        <button class="btn btn-outline-danger offset-7">Delete</button>
+                    </form>
+                </div>
+                <br>
+            </div>
+            <% } %>
+    </div>
 
 </body>
+
 </html>
